--- a/css/index.css
+++ b/css/index.css
@@ -81,3 +81,58 @@ a {
     background: #42E8E0;
     border: none;
 }
+
+.navbar-toggler .navbar-toggler-icon {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='white' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e") !important;
+}
+.navbar-toggler:focus{
+    outline: none;
+    box-shadow: none;
+}
+
+
+
+
+/* hero section */
+.hero-bg{
+    background-image: url('../img/elements/bg.png');
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-height: 95vh;
+}
+.hero-title{
+    color: #FFF;
+font-size: 3em;
+font-weight: 700;
+text-transform: capitalize;
+}
+.hero-desc{
+    color: var(--on-surface, #FFF);
+text-align: center;
+font-size: 20px;
+font-weight: 400;
+}
+.hero-btn{
+    width: 120px;
+    line-height: normal;
+}
+.hero-signin{
+    border-radius: 51px;
+background: #15BFFD;
+}
+.hero-signup{
+    border-radius: 47px;
+border: 2px solid #15BFFD;
+}
+
+
+
+
+
+
+@media screen and (max-width: 600px){
+    .hero-bg{
+        min-height: 60vh;
+    }
+}
