--- a/css/index.css
+++ b/css/index.css
@@ -216,6 +216,13 @@ a {
 
 
 /* market */
+.market-summery {
+    background-image: url('../img/elements/market_bg.png');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 .market-summery h2 {
     color: #FFF;
     font-size: 40px;
@@ -266,9 +273,11 @@ a {
     font-weight: 500;
     line-height: 24.737px;
 }
-.corowsel-container{
+
+.corowsel-container {
     width: 90%;
 }
+
 .market-summery a {
     color: #FFF;
     font-size: 22px !important;
@@ -276,13 +285,98 @@ a {
     cursor: pointer;
     font-family: 'Exo', sans-serif !important;
 }
+
 @media screen and (max-width: 992px) {}
 
 @media screen and (max-width: 600px) {
-    .v-line-1{
+    .v-line-1 {
         display: none;
     }
-    .corowsel-container{
+
+    .corowsel-container {
         width: 100%;
+    }
+}
+
+
+
+
+
+
+
+/* about */
+.about {
+    background-image: url('../img/elements/about_bg.png');
+    background-position: center right;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: max-content;
+}
+
+.about h2 {
+    color: #D9D9D9;
+    text-shadow: 0px 3.435014486312866px 3.435014486312866px 0px rgba(0, 0, 0, 0.25);
+    font-size: 48px;
+    font-weight: 700;
+    letter-spacing: 2.576px;
+    text-transform: capitalize;
+}
+
+.text_box {
+    width: 75%;
+    height: 80px;
+    background-image: url('../img/elements/about_box_outline.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
+}
+
+.text_box p {
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.abt_para {
+    width: 75%;
+    color: #EAEAEA;
+    text-align: justify;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+@media screen and (max-width: 1024px) {
+    .text_box {
+        width: 90%;
+    }
+    .abt_para{
+        width: 95%;
+    }
+}
+@media screen and (max-width: 992px) {
+    .text_box,.abt_para{
+        width: 100%;
+    }
+}
+@media screen and (max-width: 540px) {
+    .about {
+        min-height: 100vh;
+    }
+    .padding-540{
+        padding-left: 10px;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .text_box {
+        height: 100px;
+        background-image: url('../img/elements/about_box_mobile.png');
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain;
+    }
+    
+    .about {
+        min-height: 100vh;
     }
 }
