--- a/css/index.css
+++ b/css/index.css
@@ -339,7 +339,7 @@ a {
 
 .abt_para {
     width: 75%;
-    color: #EAEAEA;
+    color: #eaeaeaa1;
     text-align: justify;
     font-size: 20px;
     font-weight: 300;
