--- a/css/index.css
+++ b/css/index.css
@@ -313,15 +313,6 @@ a {
     height: max-content;
 }
 
-.about h2 {
-    color: #D9D9D9;
-    text-shadow: 0px 3.435014486312866px 3.435014486312866px 0px rgba(0, 0, 0, 0.25);
-    font-size: 48px;
-    font-weight: 700;
-    letter-spacing: 2.576px;
-    text-transform: capitalize;
-}
-
 .text_box {
     width: 75%;
     height: 80px;
@@ -335,14 +326,6 @@ a {
     color: #FFF;
     font-size: 20px;
     font-weight: 500;
-}
-
-.abt_para {
-    width: 75%;
-    color: #eaeaeaa1;
-    text-align: justify;
-    font-size: 20px;
-    font-weight: 300;
 }
 
 @media screen and (max-width: 1024px) {
@@ -371,12 +354,122 @@ a {
     .text_box {
         height: 100px;
         background-image: url('../img/elements/about_box_mobile.png');
-        background-repeat: no-repeat;
-        background-position: center;
-        background-size: contain;
     }
-    
-    .about {
+}
+
+
+
+
+
+
+
+
+
+
+
+/* crypto_swapping */
+.crypto_swapping {
+    /* background-image: url('../img/elements/market_bg.png'); */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+.img_swap{
+    width:80%;
+}
+.crypto_swapping ul{
+    list-style: none;
+    width: max-content;
+}
+.crypto_swapping ul li{
+    width: max-content;
+}
+.absolute-z-1{
+    z-index: 1;
+}
+.absolute-z-2{
+    z-index: 2;
+}
+.absolute-z-3{
+    z-index: 3;
+}
+@media screen and (max-width: 1024px) {
+
+}
+@media screen and (max-width: 992px) {
+}
+@media screen and (max-width: 540px) {
+    .crypto_swapping {
         min-height: 100vh;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    
+}
+
+
+
+/* all common*/
+.title_h2 {
+    color: #D9D9D9;
+    text-shadow: 0px 3.435014486312866px 3.435014486312866px 0px rgba(0, 0, 0, 0.25);
+    font-size: 48px;
+    font-weight: 700;
+    letter-spacing: 2.576px;
+    text-transform: capitalize;
+}
+.title_h3 {
+    color: #D9D9D9;
+    text-shadow: 0px 3.435014486312866px 3.435014486312866px 0px rgba(0, 0, 0, 0.25);
+    font-size: 38px;
+    font-weight: 700;
+    letter-spacing: 2.576px;
+    text-transform: capitalize;
+}
+.para {
+    width: 75%;
+    color: #eaeaeab9;
+    text-align: justify;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.color_btn {
+    width: 150px;
+    height: 40px;
+    font-size: 14px !important;
+    line-height: 20px !important;
+    border-radius: 47px;
+    font-family: 'Exo', sans-serif;
+    font-weight: 600;
+    text-align: center;
+    border: 2px solid #15BFFD;
+    transition: background-color 0.5s ease-in, color 0.5s ease-in, border 0.5s ease-in;
+    color: #180D5B;
+    background: #15BFFD;
+    border: 2px solid #15BFFD;
+}
+.color_btn:hover {
+    color: #15BFFD;
+    background: transparent;
+}
+.h_line{
+    width: 60%;
+    height: 2px;
+    background: linear-gradient(71deg, #15BFFD 0%, rgba(118, 47, 254, 0.68) 100%);
+}
+@media screen and (max-width: 992px) {
+    .h_line{
+        width: 100%;
+    }
+    .para {
+        width: 100%;
+    }
+    .title_h2 {
+        font-size: 38px;
+    }
+    .title_h3 {
+        font-size: 28px;
     }
 }
