protection section mobile view

--- a/css/index.css
+++ b/css/index.css
@@ -420,6 +420,31 @@ a {
 
 
 
+
+
+
+
+/* protection */
+.protection_text_box{
+    border-radius: 8px;
+background: rgba(255, 255, 255, 0.05);
+border: solid 1px #2b11d3;
+}
+.protection_title {
+    color: #FFF;
+    font-family: Exo;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    letter-spacing: -0.4px;
+}
+  
+
+
+
+
+
 /* all common*/
 .title_h2 {
     color: #D9D9D9;
